--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "nodemon server/app.js",
     "dev": "vite",
     "build": "vite build",
-    "render": "npm install && npm run migrate-latest ",
+    "render": "npm install && npm run migrate ",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "makeMigration": "knex migrate:make",
