--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "pg": "^8.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
     "styled-components": "^6.1.11",
     "supertest": "^7.0.0"
   },
